(test
 (name test)
 (modules test)
 (package banawa)
 (deps
  (source_tree data))
 (libraries banawa mtime.clock.os cstruct-unix mirage-crypto-rng.unix))

(executable
 (name awa_test_server)
 (public_name banawa_test_server)
 (modules awa_test_server)
 (package banawa)
 (libraries banawa mtime.clock.os cstruct-unix mirage-crypto-rng.unix))

(executable
 (name awa_test_client)
 (public_name banawa_test_client)
 (modules awa_test_client)
 (package banawa)
 (libraries banawa mirage-crypto-rng.unix mtime.clock.os cmdliner fmt.tty
   logs.fmt logs.cli fmt.cli cstruct-unix))

(executable
 (name awa_lwt_server)
 (public_name banawa_lwt_server)
 (modules awa_lwt_server)
 (package banawa-lwt)
 (libraries banawa banawa-lwt mtime.clock.os cstruct-unix mirage-crypto-rng.unix))

(executable
 (name awa_gen_key)
 (public_name banawa_gen_key)
 (modules awa_gen_key)
 (package banawa)
 (libraries banawa mirage-crypto-rng.unix cmdliner))

(executable
 (name public_key_of_seed)
 (modules public_key_of_seed)
 (libraries banawa))

(cram
 (deps %{bin:awa_gen_key} public_key_of_seed.exe))
